@@ -3,6 +3,9 @@ package com.geomaticaeambiente.klemgui.ui;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.openjump.core.rasterimage.RasterImageLayer;
+
+import com.vividsolutions.jump.workbench.JUMPWorkbench;
 import com.vividsolutions.jump.workbench.model.Layerable;
 
 /**
@@ -21,7 +24,9 @@ public class LayerablesList {
     }
 
     public void addListener(LayersChangedListener toAdd) {
-
+        final List<RasterImageLayer> rLayers = JUMPWorkbench.getInstance()
+                .getContext().getTask().getLayerManager()
+                .getLayerables(RasterImageLayer.class);
         boolean found = false;
         for (final LayersChangedListener listener : listeners) {
             if (listener.getClass().equals(toAdd.getClass())) {
@@ -33,6 +38,24 @@ public class LayerablesList {
             listeners.add(toAdd);
         }
 
+        /*       for (final RasterImageLayer name2 : rLayers) {
+                   final RasterImageLayer slayer = name2;
+                   if (!rLayers.contains(slayer)) {
+
+                       listeners.remove(slayer);
+
+                   }
+               }*/
+        /*    if (JUMPWorkbench.getInstance().getContext().getTask()
+                    .getLayerManager().getLayerables(RasterImageLayer.class)
+                    .isEmpty()) {
+                for (int i = 0; i < listeners.size(); i++) {
+                    listeners.remove(i);
+                    listHasChanged(getLayerables());
+                    // getLayerables()[i] = null;
+                }
+
+            }*/
     }
 
     public void listHasChanged(Layerable[] newList) {
