@@ -3,6 +3,14 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2018-1-20 Giuseppe Aruta. Corrected a list of bug and implementations to speed
+    up OpenKLEM;
+    1) Reduced hydro table to 2500 cells for OpenKLEM output tab (speedup time)
+    2) added monitoring to mostly all processes
+    3) workaround to avoid 'gost' list of raster layers (not yet solved)
+    4) workaround to solve border false values on the borders for aspect and 
+       slope rasters
+    5) added file type to exported raster plugin
 
 2018-1-7 Giuseppe Aruta. OpenKLEM output tab. Reduced from 5000 to 2500 cells
     output hydro table
